--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,30 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="container">
+	<div class="header">
+        <ul class="nav nav-pills pull-right">
+          <li><a href="/">Home</a></li>
+          <li><a href="#">Agendamento</a></li>
+          <li><a href="#">Pacientes</a></li>
+          <li><a href="#">Consulta</a></li>
+        </ul>
+        <h3 class="text-muted">Consuta Plus</h3>
+    </div>
+	<div class='row text-center' style="margin-top:15px;" >
+      
+		<%= yield %>
+	</div>
 
-<%= yield %>
+  <div class="footer">
+    <p>&copy; Copyright 2013 Consulta Plus. Todos os direitos reservados.</p>
+
+<% if logged_in? %>
+    Area admin: <%= link_to "Usuarios", controller: "users", action: "list" %>
+<% end %>    
+  </div>
+</div>
+
 
 </body>
 </html>
