inclusao de cadastro de paciente

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
         <ul class="nav nav-pills pull-right">
           <li><a href="/">Home</a></li>
           <li><a href="#">Agendamento</a></li>
-          <li><a href="#">Pacientes</a></li>
+          <li><a href="/pacientes">Pacientes</a></li>
           <li><a href="#">Consulta</a></li>
         </ul>
         <h3 class="text-muted">Consuta Plus</h3>
