--- a/app/views/users/list.html.erb
+++ b/app/views/users/list.html.erb
@@ -1,4 +1,5 @@
 <h3>Cadastrados de Usuarios</h3>
+<h3>Cadastrados de Usuarios</h3>
 <%= link_to "Novo Usuario", {:action => 'new'} , class: "btn btn-lg btn-primary btn-block" %>
 
 	<table class="table table-hover table-condensed">
